--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 img  {
   width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .adoption {
@@ -10,4 +13,8 @@ img  {
   border: 1px solid grey;
   margin: 20px;
   padding: 20px;
+}
+
+body {
+  font: sans-serif;
 }
