--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
+body {
+  font: sans-serif;
+}
+
 img  {
-  width: 300px;
+  width: 200px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -7,14 +11,15 @@ img  {
 
 .adoption {
   border: 2px solid black;
+  margin: 20px;
 }
 
 .dog {
   border: 1px solid grey;
   margin: 20px;
   padding: 20px;
+  width: 400px;
+  float: left;
+  height: 600px;
 }
 
-body {
-  font: sans-serif;
-}
