--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,16 @@
 body {
   font: sans-serif;
+  width: 80%;
+  border: 2px solid red;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+h1, h2 {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 img  {
@@ -18,7 +29,7 @@ img  {
   border: 1px solid grey;
   margin: 20px;
   padding: 20px;
-  width: 400px;
+  width: 40%;
   float: left;
   height: 600px;
 }
