add overflow property to dog cards. and fixed some indentation errors
Co-authored-by: Jonathan Delcid jdelcid23@gmail.com

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,9 @@ img  {
   float: left;
   height: 600px;
   background-color: pink;
+  overflow: auto;
 }
 
-ul {
+.dog ul {
   font-style: italic;
 }
